InventoryManagement/force-app/src/objects/Barcode_Scan__c.object
<CustomObject>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quantity_Received__c</fullName>
        <label>Quantity Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scan_Info__c</fullName>
        <label>Scan Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Barcode Scan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>bs-{0000}</displayFormat>
        <label>Barcode Scans Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Barcode Scans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>